<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/tiled_pattern_settings"
	android:key="tiled_pattern_wallpaper_settings">

	<com.dinpattern.ListPreferenceMultiSelect
		android:key="selected_patterns"
		android:defaultValue="all"
		android:title="@string/selected_patterns_title"
		android:dialogTitle="@string/selected_patterns_dialog_title"
		android:summary="@string/selected_patterns_summary"
		android:entries="@array/selected_patterns_entries"
		android:entryValues="@array/selected_patterns_entry_values"/>

	<ListPreference
		android:key="movement_speed"
		android:defaultValue="slow"
		android:title="@string/movement_speed_title"
		android:summary="@string/movement_speed_summary"
		android:entries="@array/movement_speed_entries"
		android:entryValues="@array/movement_speed_entry_values"/>

	<ListPreference
		android:key="movement_direction"
		android:defaultValue="random"
		android:title="@string/movement_direction_title"
		android:summary="@string/movement_direction_summary"
		android:entries="@array/movement_direction_entries"
		android:entryValues="@array/movement_direction_entry_values"/>

	<ListPreference
		android:key="change_frequency"
		android:defaultValue="often"
		android:title="@string/change_frequency_title"
		android:summary="@string/change_frequency_summary"
		android:entries="@array/change_frequency_entries"
		android:entryValues="@array/change_frequency_entry_values"/>

	<CheckBoxPreference
		android:key="homescreen_change"
		android:defaultValue="true"
		android:summary="@string/homescreen_change_summary"
		android:title="@string/homescreen_change_title"
		android:summaryOn="@string/homescreen_change_summary_on"
		android:summaryOff="@string/homescreen_change_summary_off"/>

	<ListPreference
		android:key="change_order"
		android:defaultValue="random"
		android:title="@string/change_order_title"
		android:summary="@string/change_order_summary"
		android:entries="@array/change_order_entries"
		android:entryValues="@array/change_order_entry_values"/>

</PreferenceScreen>
